3까지만 보여주자

--- a/test_following.html
+++ b/test_following.html
@@ -237,6 +237,14 @@
       <img src="https://raw.githubusercontent.com/unembabo/images/main/first.png"
            style="width:100%;height:100%;object-fit:contain;display:block;">
     </div>
+              <div class="imgFrame" style="height:180px;overflow:hidden;border-radius:8px;">
+      <img src="https://raw.githubusercontent.com/unembabo/images/main/second.png"
+           style="width:100%;height:100%;object-fit:contain;display:block;">
+    </div>
+                  <div class="imgFrame" style="height:180px;overflow:hidden;border-radius:8px;">
+      <img src="https://raw.githubusercontent.com/unembabo/images/main/three.png"
+           style="width:100%;height:100%;object-fit:contain;display:block;">
+    </div>
           </div>
         </div>
       </div>
