사진업로드

--- a/test1.html
+++ b/test1.html
@@ -158,7 +158,6 @@
 
 <div class="twoCol" style="display:flex;gap:16px;align-items:flex-start;">
 
-  <!-- ✅ 정상 클릭 -->
   <div style="flex:1;border:1px solid #e5e7eb;border-radius:10px;
               padding:12px;background:#f9fafb;display:flex;flex-direction:column;">
     <div style="display:flex;justify-content:center;align-items:center;gap:6px;
@@ -169,7 +168,7 @@
 
     <div class="imgFrame" style="height:180px;overflow:hidden;border-radius:8px;">
       <img src="https://raw.githubusercontent.com/unembabo/images/main/add_add_add.png"
-           style="width:100%;height:100%;object-fit:cover;display:block;">
+           style="width:100%;height:100%;object-fit:contain;display:block;">
     </div>
   </div>
 
@@ -182,7 +181,7 @@
 
     <div class="imgFrame" style="height:180px;overflow:hidden;border-radius:8px;">
       <img src="https://raw.githubusercontent.com/unembabo/images/main/add_NO.png"
-           style="width:100%;height:100%;object-fit:cover;display:block;">
+           style="width:100%;height:100%;object-fit:contain;display:block;">
     </div>
   </div>
 
@@ -209,8 +208,6 @@
         </div>
       </div>
     </div>
-
-
     <!--주의사항-->
     <div style='display:flex;flex-direction:column;gap:10px;border:1px solid #e5e7eb;border-radius:16px;padding:18px;margin-bottom:16px;background:#ffffff;'>
     <div style='display:flex;align-items:center;gap:10px;'>
