--- a/test_following.html
+++ b/test_following.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
@@ -12,22 +13,42 @@
   <style>
     /* 모바일에서만 레이아웃/타이포 안정화 */
     @media (max-width: 520px) {
-      body { padding: 12px !important; }
-      .container { gap: 14px !important; }
+      body {
+        padding: 12px !important;
+      }
+
+      .container {
+        gap: 14px !important;
+      }
 
       /* 타이틀 줄바꿈 자연스럽게 */
-      .titleRow { align-items: flex-start !important; }
-      .titleText { font-size: 18px !important; line-height: 1.25 !important; }
+      .titleRow {
+        align-items: flex-start !important;
+      }
+
+      .titleText {
+        font-size: 18px !important;
+        line-height: 1.25 !important;
+      }
 
       /* STEP 카드 패딩 살짝 줄이기 */
-      .card { padding: 14px 14px !important; }
+      .card {
+        padding: 14px 14px !important;
+      }
 
       /* 2열 비교/카드 → 1열로 */
-      .twoCol { flex-direction: column !important; }
-      .twoCol > div { width: 100% !important; }
+      .twoCol {
+        flex-direction: column !important;
+      }
+
+      .twoCol>div {
+        width: 100% !important;
+      }
 
       /* 이미지 프레임 높이 모바일에서 살짝 줄이기(안 깨짐) */
-      .imgFrame { height: 160px !important; }
+      .imgFrame {
+        height: 160px !important;
+      }
     }
   </style>
 </head>
@@ -47,10 +68,10 @@
       </div>
     </div>
 
-    <!-- 예시 이미지 -->
-    <img src="https://raw.githubusercontent.com/goaldeer/imgShow/refs/heads/main/Gemini_Generated_Image_jviz61jviz61jviz.png"
-         alt="검색 예시"
-         style="width:100%;height:auto;border-radius:12px;box-shadow:0 2px 8px rgba(0,0,0,0.08);display:block;">
+    <img
+      src="https://raw.githubusercontent.com/goaldeer/imgShow/refs/heads/main/Gemini_Generated_Image_jviz61jviz61jviz.png"
+      alt="검색 예시"
+      style="width:100%;height:auto;border-radius:12px;box-shadow:0 2px 8px rgba(0,0,0,0.08);display:block;">
 
     <!-- 타이틀 -->
     <div class="titleRow" style="display:flex;align-items:center;gap:12px;">
@@ -71,8 +92,12 @@
                     color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;">1</div>
         <div>
           <div style="font-size:16px;font-weight:800;">
-            키워드 복사 <span style="color:#dc2626;">(꼭 필요)</span>
+      키워드 복사 <span style="color:#dc2626;">(꼭 필요)            
+      <img src="https://raw.githubusercontent.com/unembabo/images/main/keywordCopy.png"
+            style="width:100%;height:auto;border-radius:10px;display:block;"></span>
           </div>
+
+
           <div style="font-size:13px;color:#475569;margin-top:4px;">
             <b>키워드 복사 버튼</b>을 눌러주세요
           </div>
@@ -116,16 +141,16 @@
         ❗ 상호를 직접 입력하면 정답 처리되지 않아요
       </div>
 
-      <!-- 비교 이미지 (모바일에서 1열로 자동 변환) -->
       <div class="twoCol" style="display:flex;gap:16px;margin-top:14px;">
         <div style="flex:1;text-align:center;">
           <div style="display:flex;justify-content:center;align-items:center;gap:6px;
                       font-size:13px;font-weight:700;color:#2563eb;margin-bottom:6px;">
-            <span style="width:14px;height:14px;border:3px solid #2563eb;border-radius:9999px;display:inline-block;"></span>
+            <span
+              style="width:14px;height:14px;border:3px solid #2563eb;border-radius:9999px;display:inline-block;"></span>
             붙여넣기
           </div>
           <img src="https://raw.githubusercontent.com/unembabo/images/main/Display_O.png"
-               style="width:100%;height:auto;border-radius:10px;display:block;">
+            style="width:100%;height:auto;border-radius:10px;display:block;">
         </div>
 
         <div style="flex:1;text-align:center;">
@@ -133,7 +158,7 @@
             ❌ 직접 입력
           </div>
           <img src="https://raw.githubusercontent.com/unembabo/images/main/DISPLAY_X.png"
-               style="width:100%;height:auto;border-radius:10px;display:block;">
+            style="width:100%;height:auto;border-radius:10px;display:block;">
         </div>
       </div>
     </div>
@@ -156,40 +181,39 @@
         ❗ 광고 플레이스를 클릭하면 미션이 실패해요
       </div>
 
-<div class="twoCol" style="display:flex;gap:16px;align-items:flex-start;">
+      <div class="twoCol" style="display:flex;gap:16px;align-items:flex-start;">
 
-  <div style="flex:1;border:1px solid #e5e7eb;border-radius:10px;
+        <div style="flex:1;border:1px solid #e5e7eb;border-radius:10px;
               padding:12px;background:#f9fafb;display:flex;flex-direction:column;">
-    <div style="display:flex;justify-content:center;align-items:center;gap:6px;
+          <div style="display:flex;justify-content:center;align-items:center;gap:6px;
                 font-size:13px;font-weight:700;color:#2563eb;margin-bottom:8px;">
-      <span style="width:14px;height:14px;border:3px solid #2563eb;border-radius:9999px;display:inline-block;"></span>
-      정상 클릭
-    </div>
+            <span
+              style="width:14px;height:14px;border:3px solid #2563eb;border-radius:9999px;display:inline-block;"></span>
+            정상 클릭
+          </div>
 
-    <div class="imgFrame" style="height:180px;overflow:hidden;border-radius:8px;">
-      <img src="https://raw.githubusercontent.com/unembabo/images/main/add_add_add.png"
-           style="width:100%;height:100%;object-fit:contain;display:block;">
-    </div>
-  </div>
+          <div class="imgFrame" style="height:180px;overflow:hidden;border-radius:8px;">
+            <img src="https://raw.githubusercontent.com/unembabo/images/main/add_add_add.png"
+              style="width:100%;height:100%;object-fit:contain;display:block;">
+          </div>
+        </div>
 
-  <!-- ❌ 광고 / 잘못된 클릭 -->
-  <div style="flex:1;border:1px solid #e5e7eb;border-radius:10px;
+        <div style="flex:1;border:1px solid #e5e7eb;border-radius:10px;
               padding:12px;background:#f9fafb;display:flex;flex-direction:column;">
-    <div style="font-size:13px;font-weight:700;color:#dc2626;margin-bottom:8px;text-align:center;">
-      ❌ 광고 / 잘못된 클릭
+          <div style="font-size:13px;font-weight:700;color:#dc2626;margin-bottom:8px;text-align:center;">
+            ❌ 광고 / 잘못된 클릭
+          </div>
+
+          <div class="imgFrame" style="height:180px;overflow:hidden;border-radius:8px;">
+            <img src="https://raw.githubusercontent.com/unembabo/images/main/add_NO.png"
+              style="width:100%;height:100%;object-fit:contain;display:block;">
+          </div>
+        </div>
+
+      </div>
+
     </div>
 
-    <div class="imgFrame" style="height:180px;overflow:hidden;border-radius:8px;">
-      <img src="https://raw.githubusercontent.com/unembabo/images/main/add_NO.png"
-           style="width:100%;height:100%;object-fit:contain;display:block;">
-    </div>
-  </div>
-
-</div>
-
-    </div>
-
-    <!-- STEP 5 -->
     <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
       <div style="display:flex;gap:12px;">
         <div style="width:28px;height:28px;border-radius:8px;background:#1e293b;
@@ -203,55 +227,16 @@
             <span style="font-weight:900;color:rgb(255, 0, 0);">미션질문</span>
             <span style="font-weight:300;color:black;font-size:13px"> 수행 후,</span>
             <span style="font-weight:900;color:rgb(255, 0, 0);">플레이스 최종링크 또는 복사된 URL</span>
+            <span style="font-weight:300;color:black;font-size:12px">또는 </span>
+            <span style="font-weight:900;color:rgb(255, 0, 0);">복사된 URL</span>
             <span style="font-weight:300;color:black;font-size:12px">로 정답을 입력해보세요! </span>
           </div>
         </div>
       </div>
     </div>
-    <!--주의사항-->
-    <div style='display:flex;flex-direction:column;gap:10px;border:1px solid #e5e7eb;border-radius:16px;padding:18px;margin-bottom:16px;background:#ffffff;'>
-    <div style='display:flex;align-items:center;gap:10px;'>
-      <div style='width:26px;height:26px;border-radius:6px;background:rgb(255, 115, 22);color:#fff;display:flex;align-items:center;justify-content:center;line-height:26px;transform:translateY(-1px);font-weight:500;'>※</div>
-      <div style='font-size:16px;font-weight:500;line-height:1.3;'>
-        <span style='font-weight:800;color:rgb(255, 115, 22);'>주의사항</span>
-      </div>
-    </div>
-    <div style='font-size:14px;line-height:1.6;color:#374151;background:#f9fafb;border-radius:8px;padding:10px;'>
-
-      <span style='font-weight:800;color:rgb(255, 115, 22);'>미션 질문 단계 건너뛰지 않고 </span>수행하기<br>
-    </div>
-  </div>
-
-
-    <!-- STEP 6 -->
-    <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
-      <div style="display:flex;gap:12px;">
-        <div style="width:28px;height:28px;border-radius:8px;background:#1e293b;
-                    color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;">6</div>
-        <div>
-          <div style="font-size:16px;font-weight:800;">
-            미션 질문을 아래 사진을 따라서 작성해보세요!
-          </div>
-          <div style="font-size:15px;font-weight:500;line-height:1.3;">
-          <div class="imgFrame" style="height:180px;overflow:hidden;border-radius:8px;">
-      <img src="https://raw.githubusercontent.com/unembabo/images/main/first.png"
-           style="width:100%;height:100%;object-fit:contain;display:block;">
-    </div>
-              <div class="imgFrame" style="height:180px;overflow:hidden;border-radius:8px;">
-      <img src="https://raw.githubusercontent.com/unembabo/images/main/second.png"
-           style="width:100%;height:100%;object-fit:contain;display:block;">
-    </div>
-                  <div class="imgFrame" style="height:180px;overflow:hidden;border-radius:8px;">
-      <img src="https://raw.githubusercontent.com/unembabo/images/main/three.png"
-           style="width:100%;height:100%;object-fit:contain;display:block;">
-    </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
 
 
   </div>
 </body>
+
 </html>
