--- a/test_following.html
+++ b/test_following.html
@@ -89,14 +89,15 @@
     <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
       <div style="display:flex;gap:12px;">
         <div style="width:28px;height:28px;border-radius:8px;background:#1e293b;
-                    color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;">1</div>
-        <div>
-          <div style="font-size:16px;font-weight:800;">
-      키워드 복사 <span style="color:#dc2626;">(꼭 필요)            
-      <img src="https://raw.githubusercontent.com/unembabo/images/main/keywordCopy.png"
-            style="width:100%;height:auto;border-radius:10px;display:block;"></span>
-          </div>
+                color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;">1</div>
 
+        <div>
+          <div style="font-size:16px;font-weight:800;display:flex;align-items:center;gap:8px;">
+            키워드 복사 버튼 클릭
+
+            <img src="https://raw.githubusercontent.com/unembabo/images/main/keywordCopy.png"
+              style="width:200px;height:auto;border-radius:4px;vertical-align:middle;" />
+          </div>
 
           <div style="font-size:13px;color:#475569;margin-top:4px;">
             <b>키워드 복사 버튼</b>을 눌러주세요
@@ -105,6 +106,7 @@
       </div>
     </div>
 
+
     <!-- STEP 2 -->
     <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
       <div style="display:flex;gap:12px;">
@@ -112,7 +114,10 @@
                     color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;">2</div>
         <div>
           <div style="font-size:16px;font-weight:800;">
-            미션 시작하기
+            미션 시작하기 버튼 클릭
+
+            <img src="https://raw.githubusercontent.com/unembabo/images/main/missionStart.png"
+              style="width:120px;height:auto;border-radius:4px;vertical-align:middle;" />            
           </div>
           <div style="font-size:13px;color:#475569;margin-top:4px;">
             <b>미션 시작하기 버튼</b>을 눌러주세요
@@ -221,6 +226,28 @@
         <div>
           <div style="font-size:16px;font-weight:800;">
             질문 답하고 링크 입력
+          </div>
+          <div style="font-size:15px;font-weight:500;line-height:1.3;">
+            <span style="font-weight:300;color:black;font-size:13px">아래 </span>
+            <span style="font-weight:900;color:rgb(255, 0, 0);">미션질문</span>
+            <span style="font-weight:300;color:black;font-size:13px"> 수행 후,</span>
+            <span style="font-weight:900;color:rgb(255, 0, 0);">플레이스 최종링크 또는 복사된 URL</span>
+            <span style="font-weight:300;color:black;font-size:12px">또는 </span>
+            <span style="font-weight:900;color:rgb(255, 0, 0);">복사된 URL</span>
+            <span style="font-weight:300;color:black;font-size:12px">로 정답을 입력해보세요! </span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+        <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
+      <div style="display:flex;gap:12px;">
+        <div style="width:28px;height:28px;border-radius:8px;background:#1e293b;
+                    color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;">#</div>
+        <div>
+          <div style="font-size:16px;font-weight:800;">
+            미션질문 참고 이미지 
           </div>
           <div style="font-size:15px;font-weight:500;line-height:1.3;">
             <span style="font-weight:300;color:black;font-size:13px">아래 </span>
