--- a/test_following.html
+++ b/test_following.html
@@ -93,80 +93,25 @@
 
         <div>
           <div style="font-size:16px;font-weight:800;display:flex;align-items:center;gap:8px;">
-            키워드 복사 버튼 클릭
 
             <img src="https://raw.githubusercontent.com/unembabo/images/main/keywordCopy.png"
               style="width:200px;height:auto;border-radius:4px;vertical-align:middle;" />
-          </div>
-
-          <div style="font-size:13px;color:#475569;margin-top:4px;">
-            <b>키워드 복사 버튼</b>을 눌러주세요
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-    <!-- STEP 2 -->
-    <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
-      <div style="display:flex;gap:12px;">
-        <div style="width:28px;height:28px;border-radius:8px;background:#1e293b;
-                    color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;">2</div>
-        <div>
-          <div style="font-size:16px;font-weight:800;">
-            미션 시작하기 버튼 클릭
-
             <img src="https://raw.githubusercontent.com/unembabo/images/main/missionStart.png"
-              style="width:120px;height:auto;border-radius:4px;vertical-align:middle;" />            
+              style="width:120px;height:auto;border-radius:4px;vertical-align:middle;" />       
+                       <img src="https://raw.githubusercontent.com/unembabo/images/main/paste.png"
+              style="width:120px;height:auto;border-radius:4px;vertical-align:middle;" />                     
           </div>
+
           <div style="font-size:13px;color:#475569;margin-top:4px;">
-            <b>미션 시작하기 버튼</b>을 눌러주세요
+            <b>키워드 복사 버튼</b>을 눌러주세요             <b>미션 시작하기 버튼</b>을 눌러주세요             복사한 키워드를 <b>그대로 붙여넣기</b> 하세요
+
+
           </div>
         </div>
       </div>
     </div>
 
-    <!-- STEP 3 -->
-    <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
-      <div style="display:flex;gap:12px;margin-bottom:12px;">
-        <div style="width:28px;height:28px;border-radius:8px;background:#1e293b;
-                    color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;">3</div>
-        <div>
-          <div style="font-size:16px;font-weight:800;">
-            키워드 붙여넣고 검색
-          </div>
-          <div style="font-size:13px;color:#475569;margin-top:4px;">
-            복사한 키워드를 <b>그대로 붙여넣기</b> 하세요
-          </div>
-        </div>
-      </div>
 
-      <div style="background:#eff6ff;border:1px solid #bfdbfe;
-                  border-radius:8px;padding:12px;font-size:13px;color:#1e40af;">
-        ❗ 상호를 직접 입력하면 정답 처리되지 않아요
-      </div>
-
-      <div class="twoCol" style="display:flex;gap:16px;margin-top:14px;">
-        <div style="flex:1;text-align:center;">
-          <div style="display:flex;justify-content:center;align-items:center;gap:6px;
-                      font-size:13px;font-weight:700;color:#2563eb;margin-bottom:6px;">
-            <span
-              style="width:14px;height:14px;border:3px solid #2563eb;border-radius:9999px;display:inline-block;"></span>
-            붙여넣기
-          </div>
-          <img src="https://raw.githubusercontent.com/unembabo/images/main/Display_O.png"
-            style="width:100%;height:auto;border-radius:10px;display:block;">
-        </div>
-
-        <div style="flex:1;text-align:center;">
-          <div style="font-size:13px;font-weight:700;color:#dc2626;margin-bottom:6px;text-align:center;">
-            ❌ 직접 입력
-          </div>
-          <img src="https://raw.githubusercontent.com/unembabo/images/main/DISPLAY_X.png"
-            style="width:100%;height:auto;border-radius:10px;display:block;">
-        </div>
-      </div>
-    </div>
 
     <!-- STEP 4 -->
     <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
