--- a/test_following.html
+++ b/test_following.html
@@ -88,22 +88,22 @@
     <!-- STEP 1 -->
     <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
       <div style="display:flex;gap:12px;">
-        <div style="width:28px;height:28px;border-radius:8px;background:#1e293b;
+        <div style="width:28px;height:28px;  flex:0 0 28px; border-radius:8px;background:#1e293b;
                 color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;">1</div>
 
         <div>
           <div style="font-size:16px;font-weight:800;display:flex;align-items:center;gap:8px;">
 
-            <img src="https://raw.githubusercontent.com/unembabo/images/main/keyword2.png"
-              style="width:200px;height:auto;border-radius:4px;vertical-align:middle;" />
+            <img src="https://raw.githubusercontent.com/unembabo/images/main/keywordCopy_narrower.png"
+              style="width:200px;height:auto;border-radius:4px;vertical-align:middle;" />  →
             <img src="https://raw.githubusercontent.com/unembabo/images/main/missionStart.png"
-              style="width:200px;height:auto;border-radius:4px;vertical-align:middle;" />       
+              style="width:150px;height:40px;border-radius:4px;vertical-align:middle;" />    →   
             <img src="https://raw.githubusercontent.com/unembabo/images/main/paste.png"
-              style="width:120px;height:auto;border-radius:4px;vertical-align:middle;" />                     
+              style="width:200px;height:auto;border-radius:4px;vertical-align:middle;" />                     
           </div>
 
           <div style="font-size:13px;color:#475569;margin-top:4px;">
-            <b>키워드 복사 버튼</b>을 눌러주세요             <b>미션 시작하기 버튼</b>을 눌러주세요             복사한 키워드를 <b>그대로 붙여넣기</b> 하세요
+            <b>키워드를 복사한 후 미션 시작하기 버튼을 눌러, 복사한 키워드를 그대로 붙여넣어 주세요.</b>
 
 
           </div>
