--- a/test_following.html
+++ b/test_following.html
@@ -104,6 +104,7 @@
 
           <div style="font-size:13px;color:#475569;margin-top:4px;">
             <b>키워드를 복사한 후 미션 시작하기 버튼을 눌러, 복사한 키워드를 그대로 붙여넣어 주세요.</b>
+1. 상호 검색 시 정답오류, 키워드 복사하기!            
 
 
           </div>
@@ -164,6 +165,22 @@
 
     </div>
 
+
+      <div style='display:flex;flex-direction:column;gap:10px;border:1px solid #e5e7eb;border-radius:16px;padding:18px;margin-bottom:16px;background:#ffffff;'>
+    <div style='display:flex;align-items:center;gap:10px;'>
+      <div style='width:26px;height:26px;border-radius:6px;background:rgb(255, 115, 22);color:#fff;display:flex;align-items:center;justify-content:center;line-height:26px;transform:translateY(-1px);font-weight:500;'>※</div>
+      <div style='font-size:16px;font-weight:500;line-height:1.3;'>
+        <span style='font-weight:800;color:rgb(255, 115, 22);'>주의사항</span>
+      </div>
+    </div>
+    <div style='font-size:14px;line-height:1.6;color:#374151;background:#f9fafb;border-radius:8px;padding:10px;'>
+      1. <span style='font-weight:800;color:rgb(255, 115, 22);'>상호 검색 시 정답오류</span>, 키워드 복사하기! <br>
+      2. 광고 플레이스 클릭 시  <span style='font-weight:800;color:rgb(255, 115, 22);'>정답오류</span><br>
+      3. <span style='font-weight:800;color:rgb(255, 115, 22);'>미션 질문 단계 건너뛰지 않고 </span>수행하기<br>
+    </div>
+  </div>
+
+
     <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
       <div style="display:flex;gap:12px;">
         <div style="width:28px;height:28px;border-radius:8px;background:#1e293b;
@@ -195,13 +212,11 @@
             미션질문 참고 이미지 
           </div>
           <div style="font-size:15px;font-weight:500;line-height:1.3;">
-            <span style="font-weight:300;color:black;font-size:13px">아래 </span>
-            <span style="font-weight:900;color:rgb(255, 0, 0);">미션질문</span>
-            <span style="font-weight:300;color:black;font-size:13px"> 수행 후,</span>
-            <span style="font-weight:900;color:rgb(255, 0, 0);">플레이스 최종링크 또는 복사된 URL</span>
-            <span style="font-weight:300;color:black;font-size:12px">또는 </span>
-            <span style="font-weight:900;color:rgb(255, 0, 0);">복사된 URL</span>
-            <span style="font-weight:300;color:black;font-size:12px">로 정답을 입력해보세요! </span>
+
+          <div class="imgFrame" style="height:180px;overflow:hidden;border-radius:8px;">
+            <img src="https://raw.githubusercontent.com/unembabo/images/main/place_picture.png"
+              style="width:100%;height:100%;object-fit:contain;display:block;">
+          </div>
           </div>
         </div>
       </div>
