--- a/test_following.html
+++ b/test_following.html
@@ -103,9 +103,8 @@
           </div>
 
           <div style="font-size:13px;color:#475569;margin-top:4px;">
-            <b>키워드를 복사한 후 미션 시작하기 버튼을 눌러, 복사한 키워드를 그대로 붙여넣어 주세요.</b>
-1. 상호 검색 시 정답오류, 키워드 복사하기!            
-
+            <b>키워드를 복사한 후 미션 시작하기 버튼을 눌러, 복사한 키워드를 그대로 붙여넣어 주세요.</b><br>
+            <span style="font-weight:900;color:rgb(255, 0, 0);">※ 상호 검색 시 정답오류, 키워드 복사하기!    </span>
 
           </div>
         </div>
@@ -114,18 +113,24 @@
 
 
 
-    <!-- STEP 4 -->
+    <!-- STEP 2 -->
     <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
 
       <div style="display:flex;gap:12px;align-items:center;margin-bottom:10px;">
         <div style="min-width:28px;height:28px;background:#1e293b;color:#fff;
                     border-radius:8px;display:flex;align-items:center;
-                    justify-content:center;font-size:14px;font-weight:700;">4</div>
+                    justify-content:center;font-size:14px;font-weight:700;">2</div>
         <div>
           <span style="font-weight:800;color:#dc2626;">엠치과의원 신암점</span>
           <span style="font-size:14px;color:#475569;"> 플레이스 클릭</span>
         </div>
       </div>
+
+                <div class="imgFrame" style="height:180px;overflow:hidden;border-radius:8px;">
+            <img src="https://raw.githubusercontent.com/unembabo/images/main/more_view.png"
+              style="width:100%;height:100%;object-fit:contain;display:block;">
+          </div>
+
 
       <div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;
                   border-radius:8px;padding:12px;margin-bottom:14px;color:#1e40af;">
@@ -184,7 +189,7 @@
     <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
       <div style="display:flex;gap:12px;">
         <div style="width:28px;height:28px;border-radius:8px;background:#1e293b;
-                    color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;">5</div>
+                    color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;">3</div>
         <div>
           <div style="font-size:16px;font-weight:800;">
             질문 답하고 링크 입력
