--- a/test_following.html
+++ b/test_following.html
@@ -11,6 +11,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Square:wght@400;700;800&display=swap" rel="stylesheet">
 
   <style>
+    /* 기본: 모든 이미지 넘침 방지
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+
     /* 모바일에서만 레이아웃/타이포 안정화 */
     @media (max-width: 520px) {
       body {
@@ -33,7 +39,17 @@
 
       /* STEP 카드 패딩 살짝 줄이기 */
       .card {
-        padding: 14px 14px !important;
+        padding: 14px 10px !important;
+      }
+
+      /* STEP 1 이미지 간격 모바일 조정 */
+      .step1-images {
+        gap: 3px !important;
+      }
+
+      /* 미션질문 이미지 그리드 1열로 */
+      .mission-grid {
+        grid-template-columns: 1fr !important;
       }
 
       /* 2열 비교/카드 → 1열로 */
@@ -50,10 +66,24 @@
         height: 160px !important;
       }
     }
+
+    .targetText {
+      font-family: "Noto Sans KR", sans-serif;
+      font-size: 17px;
+      line-height: 22px;
+      font-weight: bolder;
+      letter-spacing: -0.3px;
+      color: rgb(0, 104, 195);
+      cursor: pointer;
+      display: inline;
+    }
+
+    */
   </style>
 </head>
 
-<body style="margin:0;font-family:'Nanum Square', sans-serif;background:#f8fafc;padding:20px;">
+<body
+  style="margin:0;font-family:'Nanum Square', sans-serif;background:rgb(229, 243, 226);color:rgb(15, 23, 42);padding:20px;overflow-x:hidden;">
   <div class="container" style="max-width:720px;margin:0 auto;display:flex;flex-direction:column;gap:20px;">
 
     <!-- 알림 -->
@@ -86,144 +116,235 @@
     </div>
 
     <!-- STEP 1 -->
+    <div style="width:28px;height:28px;background:#1e293b;color:#fff;
+                    border-radius:8px;display:flex;align-items:center;
+                    justify-content:center;font-size:14px;font-weight:700;margin-bottom:-10px;">1</div>
+
     <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
-      <div style="display:flex;gap:12px;">
-        <div style="width:28px;height:28px;  flex:0 0 28px; border-radius:8px;background:#1e293b;
-                color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;">1</div>
+      <div style="display:flex;flex-direction:column;gap:0px;">
+        <div class="step1-images"
+          style="display:flex; margin-bottom:6px; align-items:center;gap:1px;flex-wrap:nowrap;min-width:0;">
+          <img src="https://raw.githubusercontent.com/unembabo/images/main/keywordpm5.png"
+            style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
+          <span style="font-size:9px;flex:0 0 auto; margin-left:-2px; color:rgba(0,0,0);">클릭 후,</span>
+          <img src="https://raw.githubusercontent.com/unembabo/images/main/missionStart22.png"
+            style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
+          <span style="font-size:9px;flex:0 0 auto; margin-left:-2px;">클릭 후,</span>
+          <img src="https://raw.githubusercontent.com/unembabo/images/main/naver_logo.png"
+            style="flex:0.65 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
+        </div>
 
-        <div>
-          <div style="font-size:16px;font-weight:800;display:flex;align-items:center;gap:8px;">
 
-            <img src="https://raw.githubusercontent.com/unembabo/images/main/keywordCopy_narrower.png"
-              style="width:200px;height:auto;border-radius:4px;vertical-align:middle;" />  →
-            <img src="https://raw.githubusercontent.com/unembabo/images/main/missionStart.png"
-              style="width:150px;height:40px;border-radius:4px;vertical-align:middle;" />    →   
-            <img src="https://raw.githubusercontent.com/unembabo/images/main/paste.png"
-              style="width:200px;height:auto;border-radius:4px;vertical-align:middle;" />                     
-          </div>
+        <div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;
+            border-radius:8px;padding:4.5px;margin-bottom:4px;color:#1e40af;">
+          <!-- ※플레이스명 직접 입력하면 정답오류, 반드시 키워드 복사 버튼 클릭하기! -->
+          <div style="font-size:13px;color:#475569;">
 
-          <div style="font-size:13px;color:#475569;margin-top:4px;">
-            <b>키워드를 복사한 후 미션 시작하기 버튼을 눌러, 복사한 키워드를 그대로 붙여넣어 주세요.</b><br>
-            <span style="font-weight:900;color:rgb(255, 0, 0);">※ 상호 검색 시 정답오류, 키워드 복사하기!    </span>
-
+            <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span><span
+              style="font-size: 12px; font-weight:900;color:rgb(255, 115, 22);"> 플레이스명 </span>
+            <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">직접 입력하면</span>
+            <span style="font-size:12px; font-weight: 900;color:#dc2626;"> 정답오류,</span>
+            <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);"> 반드시 키워드 복사 버튼 클릭하기!</span>
           </div>
         </div>
+
       </div>
     </div>
 
 
 
     <!-- STEP 2 -->
-    <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
+    <div style="width:28px;height:28px;background:#1e293b;color:#fff;
+                    border-radius:8px;display:flex;align-items:center;
+                    justify-content:center;font-size:14px;font-weight:700;margin-bottom:-10px;">2</div>
+    <div class="card" style="background:#ffffff;border-radius:12px;padding:10px 10px;border:1px solid #e5e7eb;">
+
 
       <div style="display:flex;gap:12px;align-items:center;margin-bottom:10px;">
-        <div style="min-width:28px;height:28px;background:#1e293b;color:#fff;
-                    border-radius:8px;display:flex;align-items:center;
-                    justify-content:center;font-size:14px;font-weight:700;">2</div>
+
         <div>
-          <span style="font-weight:800;color:#dc2626;">엠치과의원 신암점</span>
-          <span style="font-size:14px;color:#475569;"> 플레이스 클릭</span>
+
+          <span class="targetText">엠치과의원 신암점</span>
+          <span style="font-size:10px; font-weight:500;color:#000000;">플레이스 클릭</span>
+
         </div>
       </div>
 
-                <div class="imgFrame" style="height:180px;overflow:hidden;border-radius:8px;">
-            <img src="https://raw.githubusercontent.com/unembabo/images/main/more_view.png"
-              style="width:100%;height:100%;object-fit:contain;display:block;">
-          </div>
+
+      <div style="font-size:10px;font-weight:400;color:#334155;margin-bottom:10px; ">
+
+        찾는 플레이스가 <span style="display:inline-flex;align-items:center;gap:4px; font-size: 12px;
+               font-weight: bold;">보이지 않으면</span>
+        <span style="display:inline-flex;align-items:center;gap:4px;
+               color:#2563eb;font-weight:800;">
+          <img src="https://raw.githubusercontent.com/unembabo/images/main/more_view_teamreader.png" style="
+         height:19px;
+         width:auto;
+         display:inline-block;
+         vertical-align:baseline;
+         position:relative;
+         top:3.5px;
+       ">
+        </span>
+        를 눌러주세요
+      </div>
 
 
       <div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;
-                  border-radius:8px;padding:12px;margin-bottom:14px;color:#1e40af;">
-        ❗ 광고 플레이스를 클릭하면 미션이 실패해요
+            border-radius:8px;padding:4.5px;margin-bottom:4px;color:#1e40af;">
+        <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span>
+        <img src="https://raw.githubusercontent.com/unembabo/images/main/ad-teamreader.png" style="
+         height:19px;
+         width:auto;
+         display:inline-block;
+         vertical-align:baseline;
+         position:relative;
+         top:3.5px;
+       "> <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">플레이스를 클릭하면</span> <span
+          style="font-size:12px; font-weight: 900;color:#dc2626;"> 정답오류</span>
+
+
       </div>
 
-      <div class="twoCol" style="display:flex;gap:16px;align-items:flex-start;">
 
-        <div style="flex:1;border:1px solid #e5e7eb;border-radius:10px;
-              padding:12px;background:#f9fafb;display:flex;flex-direction:column;">
-          <div style="display:flex;justify-content:center;align-items:center;gap:6px;
-                font-size:13px;font-weight:700;color:#2563eb;margin-bottom:8px;">
-            <span
-              style="width:14px;height:14px;border:3px solid #2563eb;border-radius:9999px;display:inline-block;"></span>
-            정상 클릭
-          </div>
+    </div>
 
-          <div class="imgFrame" style="height:180px;overflow:hidden;border-radius:8px;">
-            <img src="https://raw.githubusercontent.com/unembabo/images/main/add_add_add.png"
-              style="width:100%;height:100%;object-fit:contain;display:block;">
-          </div>
+
+
+
+    <div
+      style='display:flex;flex-direction:column;gap:10px;border:1px solid #e5e7eb;border-radius:16px;padding:18px;margin-bottom:16px;background:#ffffff;'>
+      <div style='display:flex;align-items:center;gap:10px;'>
+        <div
+          style='width:26px;height:26px;border-radius:6px;background:rgb(255, 115, 22);color:#fff;display:flex;align-items:center;justify-content:center;line-height:26px;transform:translateY(-1px);font-weight:500;'>
+          ※</div>
+        <div style='font-size:16px;font-weight:500;line-height:1.3;'>
+          <span style='font-weight:800;color:rgb(255, 115, 22);'>주의사항</span>
         </div>
-
-        <div style="flex:1;border:1px solid #e5e7eb;border-radius:10px;
-              padding:12px;background:#f9fafb;display:flex;flex-direction:column;">
-          <div style="font-size:13px;font-weight:700;color:#dc2626;margin-bottom:8px;text-align:center;">
-            ❌ 광고 / 잘못된 클릭
-          </div>
-
-          <div class="imgFrame" style="height:180px;overflow:hidden;border-radius:8px;">
-            <img src="https://raw.githubusercontent.com/unembabo/images/main/add_NO.png"
-              style="width:100%;height:100%;object-fit:contain;display:block;">
-          </div>
-        </div>
-
       </div>
-
-    </div>
-
-
-      <div style='display:flex;flex-direction:column;gap:10px;border:1px solid #e5e7eb;border-radius:16px;padding:18px;margin-bottom:16px;background:#ffffff;'>
-    <div style='display:flex;align-items:center;gap:10px;'>
-      <div style='width:26px;height:26px;border-radius:6px;background:rgb(255, 115, 22);color:#fff;display:flex;align-items:center;justify-content:center;line-height:26px;transform:translateY(-1px);font-weight:500;'>※</div>
-      <div style='font-size:16px;font-weight:500;line-height:1.3;'>
-        <span style='font-weight:800;color:rgb(255, 115, 22);'>주의사항</span>
+      <div style='font-size:14px;line-height:1.6;color:#374151;background:#f9fafb;border-radius:8px;padding:10px;'>
+        1. <span style='font-weight:800;color:rgb(255, 115, 22);'>상호 검색 시 정답오류</span>, 키워드 복사하기! <br>
+        2. 광고 플레이스 클릭 시 <span style='font-weight:800;color:rgb(255, 115, 22);'>정답오류</span><br>
+        3. <span style='font-weight:800;color:rgb(255, 115, 22);'>미션 질문 단계 건너뛰지 않고 </span>수행하기<br>
       </div>
     </div>
-    <div style='font-size:14px;line-height:1.6;color:#374151;background:#f9fafb;border-radius:8px;padding:10px;'>
-      1. <span style='font-weight:800;color:rgb(255, 115, 22);'>상호 검색 시 정답오류</span>, 키워드 복사하기! <br>
-      2. 광고 플레이스 클릭 시  <span style='font-weight:800;color:rgb(255, 115, 22);'>정답오류</span><br>
-      3. <span style='font-weight:800;color:rgb(255, 115, 22);'>미션 질문 단계 건너뛰지 않고 </span>수행하기<br>
-    </div>
-  </div>
 
 
+    <div style="width:28px;height:28px;background:#1e293b;color:#fff;
+                    border-radius:8px;display:flex;align-items:center;
+                    justify-content:center;font-size:14px;font-weight:700;margin-bottom:-12px; margin-bottom:-10px;">3</div>
     <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
-      <div style="display:flex;gap:12px;">
-        <div style="width:28px;height:28px;border-radius:8px;background:#1e293b;
-                    color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;">3</div>
-        <div>
-          <div style="font-size:16px;font-weight:800;">
-            질문 답하고 링크 입력
-          </div>
-          <div style="font-size:15px;font-weight:500;line-height:1.3;">
-            <span style="font-weight:300;color:black;font-size:13px">아래 </span>
-            <span style="font-weight:900;color:rgb(255, 0, 0);">미션질문</span>
-            <span style="font-weight:300;color:black;font-size:13px"> 수행 후,</span>
-            <span style="font-weight:900;color:rgb(255, 0, 0);">플레이스 최종링크 또는 복사된 URL</span>
-            <span style="font-weight:300;color:black;font-size:12px">또는 </span>
-            <span style="font-weight:900;color:rgb(255, 0, 0);">복사된 URL</span>
-            <span style="font-weight:300;color:black;font-size:12px">로 정답을 입력해보세요! </span>
-          </div>
+      <div>
+
+        <div style="font-size:15px;font-weight:500;line-height:1.3;">
+          <span style="font-weight:300;color:black;font-size:13px">아래 </span>
+          <img src="https://raw.githubusercontent.com/unembabo/images/main/accent-teamreader.png" style="flex:3 1 0;
+         height:28px;
+         width:auto;
+         display:inline-block;
+         vertical-align:baseline;
+         position:relative;
+         top:6.5px;
+       "><span class="text-base font-semibold leading-[18px] text-slate-900">미션 질문</span>
+
+          <span style="font-weight:300;color:black;font-size:13px"> 수행 후,<br></span>
+          <span style="font-weight:900; font-size:13px;   color:rgb(255, 0, 0);">플레이스 최종링크</span>
+          <span style="font-weight:300;color:black;font-size:12px">또는 </span>
+          <span style="font-weight:900; font-size:13px; color:rgb(255, 0, 0);"> 복사된 URL</span>
+          <span style="font-weight:300;color:black;font-size:12px">을 정답란에 입력하기! </span>
         </div>
       </div>
     </div>
 
 
-        <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
-      <div style="display:flex;gap:12px;">
-        <div style="width:28px;height:28px;border-radius:8px;background:#1e293b;
-                    color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;">#</div>
-        <div>
-          <div style="font-size:16px;font-weight:800;">
-            미션질문 참고 이미지 
-          </div>
-          <div style="font-size:15px;font-weight:500;line-height:1.3;">
+    <div style="width:28px;height:28px;background:#1e293b;color:#fff;
+                    border-radius:8px;display:flex;align-items:center;
+                    justify-content:center;font-size:14px;font-weight:700;margin-bottom:-10px;">#</div>
+    <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
+      <div style="flex:1;">
+        <div style="font-size:16px;font-weight:800;margin-bottom:6px;">
+          미션질문 참고 이미지
+        </div>
 
-          <div class="imgFrame" style="height:180px;overflow:hidden;border-radius:8px;">
-            <img src="https://raw.githubusercontent.com/unembabo/images/main/place_picture.png"
-              style="width:100%;height:100%;object-fit:contain;display:block;">
+        <!-- 안내 문구 -->
+        <div style="font-size:13px;color:#64748b;margin-bottom:12px;">
+          아래 이미지를 참고해 미션 질문에 정확히 답변해 주세요
+        </div>
+
+        <div class="mission-grid" style="display:grid;grid-template-columns:1fr 1fr;gap:12px;">
+
+          <!-- 왼쪽 : 큰 이미지 -->
+          <div>
+            <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:4px;">
+              플레이스 리뷰 탭
+            </div>
+            <div style="height:280px;border-radius:8px;overflow:hidden;border:1px solid #e5e7eb;
+              display:flex;align-items:center;justify-content:center;background:#fff;">
+              <img src="https://raw.githubusercontent.com/unembabo/images/main/review.png"
+                style="width:100%;height:100%;object-fit:cover;object-position:top left;">
+            </div>
           </div>
+
+          <!-- 오른쪽 : 작은 이미지 2개 -->
+          <div style="display:flex;flex-direction:column;gap:12px;">
+
+            <div>
+              <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:4px;">
+                플레이스 사진 탭
+              </div>
+              <div style="height:124px;border-radius:8px;overflow:hidden;border:1px solid #e5e7eb;
+                  display:flex;align-items:center;justify-content:center;background:#fff;">
+                <img src="https://raw.githubusercontent.com/unembabo/images/main/place_picture.png"
+                  style="max-width:100%;max-height:100%;object-fit:contain;">
+              </div>
+            </div>
+
+            <div>
+              <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:4px;">
+                플레이스 지도 탭
+              </div>
+              <div style="height:124px;border-radius:8px;overflow:hidden;border:1px solid #e5e7eb;
+                  display:flex;align-items:center;justify-content:center;background:#fff;">
+                <img src="https://raw.githubusercontent.com/unembabo/images/main/map.png"
+                  style="max-width:100%;max-height:100%;object-fit:contain;">
+              </div>
+            </div>
+
           </div>
         </div>
+
+        <!-- 아래 추가 2열 -->
+        <div class="mission-grid" style="display:grid;grid-template-columns:repeat(2, 1fr);gap:12px;margin-top:12px;">
+
+          <div>
+            <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:4px;">
+              플레이스 주변 탭
+            </div>
+            <div style="height:150px;border-radius:8px;overflow:hidden;border:1px solid #e5e7eb;
+                display:flex;align-items:center;justify-content:center;background:#fff;">
+              <img src="https://raw.githubusercontent.com/unembabo/images/main/narrow.png"
+                style="max-width:100%;max-height:100%;object-fit:contain;">
+            </div>
+          </div>
+
+
+          <div>
+            <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:4px;">
+              공유 버튼을 눌러서 URL 복사
+            </div>
+            <div style="height:150px;border-radius:8px;overflow:hidden;border:1px solid #e5e7eb;
+                display:flex;flex-direction:column;align-items:center;justify-content:center;gap:8px;background:#fff;">
+              <img src="https://raw.githubusercontent.com/unembabo/images/main/share.png"
+                style="width:60px;height:auto;object-fit:contain;">
+              <img src="https://raw.githubusercontent.com/unembabo/images/main/url_copy.png"
+                style="width:60px;height:auto;object-fit:contain;">
+            </div>
+          </div>
+
+        </div>
+
+
+
       </div>
     </div>
 
