--- a/test1.html
+++ b/test1.html
@@ -29,6 +29,16 @@
       /* 이미지 프레임 높이 모바일에서 살짝 줄이기(안 깨짐) */
       .imgFrame { height: 160px !important; }
     }
+
+    .targetText{
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 17px;
+  line-height: 22px;
+  letter-spacing: -0.3px;
+  color: rgb(0, 104, 195);
+  cursor: pointer;
+  display: inline;
+}
   </style>
 </head>
 
@@ -148,6 +158,7 @@
         <div>
           <span style="font-weight:800;color:#dc2626;">엠치과의원 신암점</span>
           <span style="font-size:14px;color:#475569;"> 플레이스 클릭</span>
+
         </div>
       </div>
 
