--- a/test_following.html
+++ b/test_following.html
@@ -135,16 +135,25 @@
         </div>
 
 
-        <div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;
-            border-radius:8px;padding:4.5px;margin-bottom:4px;color:#1e40af;">
-          <!-- ※플레이스명 직접 입력하면 정답오류, 반드시 키워드 복사 버튼 클릭하기! -->
+        <!-- <div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;
+            border-radius:8px;padding:4.5px;margin-bottom:4px;color:#1e40af;"> -->
+<div style="
+  font-size:13px;
+  background:#eff6ff;
+  border:1px solid #bfdbfe;
+  border-radius:8px;
+  padding:4.5px 8px;
+  margin-bottom:4px;
+  color:#1e40af;
+  display: inline-block; align-self:flex-start;
+">
           <div style="font-size:13px;color:#475569;">
 
             <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span><span
-              style="font-size: 12px; font-weight:900;color:rgb(255, 115, 22);"> 플레이스명 </span>
+              style="font-size: 10.7px; font-weight:900;color:rgb(255, 115, 22);"> 플레이스명 </span>
             <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">직접 입력하면</span>
-            <span style="font-size:12px; font-weight: 900;color:#dc2626;"> 정답오류,</span>
-            <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);"> 반드시 키워드 복사 버튼 클릭하기!</span>
+            <span style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류,</span>
+            <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);"> 반드시 키워드 복사 버튼 클릭하기! &nbsp;&nbsp;&nbsp;</span>
           </div>
         </div>
 
@@ -160,7 +169,7 @@
     <div class="card" style="background:#ffffff;border-radius:12px;padding:10px 10px;border:1px solid #e5e7eb;">
 
 
-      <div style="display:flex;gap:12px;align-items:center;margin-bottom:10px;">
+      <div style="display:flex;gap:12px;align-items:center;margin-bottom:2.5px;">
 
         <div>
 
@@ -173,35 +182,38 @@
 
       <div style="font-size:10px;font-weight:400;color:#334155;margin-bottom:10px; ">
 
-        찾는 플레이스가 <span style="display:inline-flex;align-items:center;gap:4px; font-size: 12px;
+        (찾는 플레이스가 <span style="display:inline-flex;align-items:center;gap:4px; font-size: 12px;
                font-weight: bold;">보이지 않으면</span>
         <span style="display:inline-flex;align-items:center;gap:4px;
                color:#2563eb;font-weight:800;">
-          <img src="https://raw.githubusercontent.com/unembabo/images/main/more_view_teamleader.png" style="
-         height:19px;
+          <img src="./newMoreView.png" style="
+         height:21px;
          width:auto;
          display:inline-block;
          vertical-align:baseline;
          position:relative;
-         top:3.5px;
-       ">
+         top:5.5px;
+       "> 
         </span>
-        를 눌러주세요
+        를 눌러주세요)
       </div>
 
-
-      <div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;
-            border-radius:8px;padding:4.5px;margin-bottom:4px;color:#1e40af;">
+<div style="
+  font-size:13px;
+  background:#eff6ff;
+  border:1px solid #bfdbfe;
+  border-radius:8px;
+  padding:2px 8px 3px;
+  margin-bottom:4px;
+  color:#1e40af;
+  display:inline-flex;
+  align-items:center;
+  gap:0px;
+">
         <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span>
-        <img src="https://raw.githubusercontent.com/unembabo/images/main/ad-teamreader.png" style="
-         height:19px;
-         width:auto;
-         display:inline-block;
-         vertical-align:baseline;
-         position:relative;
-         top:3.5px;
-       "> <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">플레이스를 클릭하면</span> <span
-          style="font-size:12px; font-weight: 900;color:#dc2626;"> 정답오류</span>
+ <img src="https://raw.githubusercontent.com/unembabo/images/main/ad-teamreader.png"
+     style="height:23px; width:auto;" /><span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">플레이스를 클릭하면&nbsp;</span> <span
+          style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류 &nbsp;</span>
 
 
       </div>
@@ -209,25 +221,6 @@
 
     </div>
 
-
-
-
-    <div
-      style='display:flex;flex-direction:column;gap:10px;border:1px solid #e5e7eb;border-radius:16px;padding:18px;margin-bottom:16px;background:#ffffff;'>
-      <div style='display:flex;align-items:center;gap:10px;'>
-        <div
-          style='width:26px;height:26px;border-radius:6px;background:rgb(255, 115, 22);color:#fff;display:flex;align-items:center;justify-content:center;line-height:26px;transform:translateY(-1px);font-weight:500;'>
-          ※</div>
-        <div style='font-size:16px;font-weight:500;line-height:1.3;'>
-          <span style='font-weight:800;color:rgb(255, 115, 22);'>주의사항</span>
-        </div>
-      </div>
-      <div style='font-size:14px;line-height:1.6;color:#374151;background:#f9fafb;border-radius:8px;padding:10px;'>
-        1. <span style='font-weight:800;color:rgb(255, 115, 22);'>상호 검색 시 정답오류</span>, 키워드 복사하기! <br>
-        2. 광고 플레이스 클릭 시 <span style='font-weight:800;color:rgb(255, 115, 22);'>정답오류</span><br>
-        3. <span style='font-weight:800;color:rgb(255, 115, 22);'>미션 질문 단계 건너뛰지 않고 </span>수행하기<br>
-      </div>
-    </div>
 
 
     <div style="width:28px;height:28px;background:#1e293b;color:#fff;
@@ -236,8 +229,8 @@
     <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
       <div>
 
-        <div style="font-size:15px;font-weight:500;line-height:1.3;">
-          <span style="font-weight:300;color:black;font-size:13px">아래 </span>
+        <div style="font-size:15px;font-weight:500;line-height:1.3; margin-bottom: 10px;">
+          <span style="font-weight:300;color:black;font-size:13px">   아래 </span>
           <img src="https://raw.githubusercontent.com/unembabo/images/main/accent-teamreader.png" style="flex:3 1 0;
          height:28px;
          width:auto;
@@ -247,12 +240,44 @@
          top:6.5px;
        "><span class="text-base font-semibold leading-[18px] text-slate-900">미션 질문</span>
 
-          <span style="font-weight:300;color:black;font-size:13px"> 수행 후,<br></span>
-          <span style="font-weight:900; font-size:13px;   color:rgb(255, 0, 0);">플레이스 최종링크</span>
-          <span style="font-weight:300;color:black;font-size:12px">또는 </span>
-          <span style="font-weight:900; font-size:13px; color:rgb(255, 0, 0);"> 복사된 URL</span>
-          <span style="font-weight:300;color:black;font-size:12px">을 정답란에 입력하기! </span>
-        </div>
+          <span style="font-weight:300;color:black;font-size:13px"> 에 따라 순서대로 클릭 후,<br></span>
+         <span style="font-size:13px; font-weight: 900;color:black;;">복사된</span>
+          <span style="font-weight:900; font-size:13px;   color:rgb(255, 0, 0);"> 최종 링크</span>
+          <span style="font-weight:300;color:black;font-size:12px">를 </span>
+          
+          <img src="https://raw.githubusercontent.com/unembabo/images/main/answer_submit.png" style="flex:3 1 0;
+         height:28px;
+         width:auto;
+         display:inline-block;
+         vertical-align:baseline;
+         position:relative;
+         top:6.5px;
+       ">          
+                   <span style="font-size:13px; font-weight: 900;color:black;;">정답 제출하기</span>
+
+        </div> 
+
+
+
+<div style="
+  font-size:13px;
+  background:#eff6ff;
+  border:1px solid #bfdbfe;
+  border-radius:8px;
+  padding:2px 8px 3px;
+  margin-bottom:4px;
+  color:#1e40af;
+  display:inline-flex;
+  align-items:center;
+  gap:4px;
+">
+        <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span>
+<span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">미션 질문 단계 건너뛰지 않고 수행하기</span>
+
+
+      </div>
+      
+
       </div>
     </div>
 
