--- a/test_following.html
+++ b/test_following.html
@@ -137,7 +137,7 @@
 
         <!-- <div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;
             border-radius:8px;padding:4.5px;margin-bottom:4px;color:#1e40af;"> -->
-<div style="
+        <div style="
   font-size:13px;
   background:#eff6ff;
   border:1px solid #bfdbfe;
@@ -153,7 +153,8 @@
               style="font-size: 10.7px; font-weight:900;color:rgb(255, 115, 22);"> 플레이스명 </span>
             <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">직접 입력하면</span>
             <span style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류,</span>
-            <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);"> 반드시 키워드 복사 버튼 클릭하기! &nbsp;&nbsp;&nbsp;</span>
+            <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);"> 반드시 키워드 복사 버튼 클릭하기!
+              &nbsp;&nbsp;&nbsp;</span>
           </div>
         </div>
 
@@ -182,7 +183,7 @@
 
       <div style="font-size:10px;font-weight:400;color:#334155;margin-bottom:10px; ">
 
-        (찾는 플레이스가 <span style="display:inline-flex;align-items:center;gap:4px; font-size: 12px;
+        &nbsp; &nbsp;(찾는 플레이스가 <span style="display:inline-flex;align-items:center;gap:4px; font-size: 12px;
                font-weight: bold;">보이지 않으면</span>
         <span style="display:inline-flex;align-items:center;gap:4px;
                color:#2563eb;font-weight:800;">
@@ -193,27 +194,28 @@
          vertical-align:baseline;
          position:relative;
          top:5.5px;
-       "> 
+       ">
         </span>
         를 눌러주세요)
       </div>
 
-<div style="
+      <div style="
   font-size:13px;
   background:#eff6ff;
   border:1px solid #bfdbfe;
   border-radius:8px;
   padding:2px 8px 3px;
-  margin-bottom:4px;
+  margin:0 0 4px auto;
   color:#1e40af;
   display:inline-flex;
   align-items:center;
+  margin-left:8px;
   gap:0px;
 ">
         <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span>
- <img src="https://raw.githubusercontent.com/unembabo/images/main/ad-teamreader.png"
-     style="height:23px; width:auto;" /><span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">플레이스를 클릭하면&nbsp;</span> <span
-          style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류 &nbsp;</span>
+        <img src="https://raw.githubusercontent.com/unembabo/images/main/ad-teamreader.png"
+          style="height:23px; width:auto;" /><span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">플레이스를
+          클릭하면&nbsp;</span> <span style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류 &nbsp;</span>
 
 
       </div>
@@ -225,12 +227,13 @@
 
     <div style="width:28px;height:28px;background:#1e293b;color:#fff;
                     border-radius:8px;display:flex;align-items:center;
-                    justify-content:center;font-size:14px;font-weight:700;margin-bottom:-12px; margin-bottom:-10px;">3</div>
+                    justify-content:center;font-size:14px;font-weight:700;margin-bottom:-12px; margin-bottom:-10px;">3
+    </div>
     <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
       <div>
 
-        <div style="font-size:15px;font-weight:500;line-height:1.3; margin-bottom: 10px;">
-          <span style="font-weight:300;color:black;font-size:13px">   아래 </span>
+        <div style="font-size:15px;font-weight:500;line-height:1.3; margin-bottom: 15px;">
+          <span style="font-weight:300;color:black;font-size:13px"> 아래 </span>
           <img src="https://raw.githubusercontent.com/unembabo/images/main/accent-teamreader.png" style="flex:3 1 0;
          height:28px;
          width:auto;
@@ -240,26 +243,30 @@
          top:6.5px;
        "><span class="text-base font-semibold leading-[18px] text-slate-900">미션 질문</span>
 
-          <span style="font-weight:300;color:black;font-size:13px"> 에 따라 순서대로 클릭 후,<br></span>
-         <span style="font-size:13px; font-weight: 900;color:black;;">복사된</span>
-          <span style="font-weight:900; font-size:13px;   color:rgb(255, 0, 0);"> 최종 링크</span>
-          <span style="font-weight:300;color:black;font-size:12px">를 </span>
-          
+          <span style="font-weight:300;color:black;font-size:13px"> 에 따라 </span><span
+            style="font-weight:300;color:black; font-weight:bold; font-size:13px">순서대로 클릭</span>
+          <span style="font-weight:300;color:black;font-size:13px">
+            후,</span>
+          <br>
+          <span style="font-size:13px; font-weight: 900;color:black;;">&nbsp;&nbsp;복사된</span>
+
+
+          <span style="font-weight:900;font-size:13px;color:rgb(255,0,0);">최종 링크</span><span
+            style="font-weight:300;color:black;font-size:12px; white-space:nowrap;">를</span>
           <img src="https://raw.githubusercontent.com/unembabo/images/main/answer_submit.png" style="flex:3 1 0;
-         height:28px;
+         height:26px;
          width:auto;
          display:inline-block;
          vertical-align:baseline;
          position:relative;
-         top:6.5px;
-       ">          
-                   <span style="font-size:13px; font-weight: 900;color:black;;">정답 제출하기</span>
+         top:8.5px;
+       ">
 
-        </div> 
-
+        </div>
 
 
-<div style="
+
+        <div style="
   font-size:13px;
   background:#eff6ff;
   border:1px solid #bfdbfe;
@@ -271,12 +278,12 @@
   align-items:center;
   gap:4px;
 ">
-        <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span>
-<span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">미션 질문 단계 건너뛰지 않고 수행하기</span>
+          <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span>
+          <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">미션 질문 단계 건너뛰지 않고 수행하기</span>
 
 
-      </div>
-      
+        </div>
+
 
       </div>
     </div>
